; ModuleID = '/home/carl/AnghaBench/postgres/src/pl/plperl/extr_plperl.c_plperl_call_perl_event_trigger_func.c'
source_filename = "/home/carl/AnghaBench/postgres/src/pl/plperl/extr_plperl.c_plperl_call_perl_event_trigger_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@dTHX = common dso_local global i32 0, align 4
@dSP = common dso_local global i32 0, align 4
@ENTER = common dso_local global i32 0, align 4
@SAVETMPS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [10 x i8] c"main::_TD\00", align 1
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_EXTERNAL_ROUTINE_EXCEPTION = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [20 x i8] c"couldn't fetch $_TD\00", align 1
@sp = common dso_local global i32 0, align 4
@PUTBACK = common dso_local global i32 0, align 4
@G_SCALAR = common dso_local global i32 0, align 4
@G_EVAL = common dso_local global i32 0, align 4
@SPAGAIN = common dso_local global i32 0, align 4
@FREETMPS = common dso_local global i32 0, align 4
@LEAVE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [47 x i8] c"didn't get a return item from trigger function\00", align 1
@ERRSV = common dso_local global i32 0, align 4
@POPs = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i32, i32*)* @plperl_call_perl_event_trigger_func to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @plperl_call_perl_event_trigger_func(%struct.TYPE_3__* %0, i32 %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  %10 = load i32, i32* @dTHX, align 4
  %11 = load i32, i32* @dSP, align 4
  %12 = load i32, i32* @ENTER, align 4
  %13 = load i32, i32* @SAVETMPS, align 4
  %14 = call i32* @get_sv(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0), i32 0)
  store i32* %14, i32** %8, align 8
  %15 = load i32*, i32** %8, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %23, label %17

17:                                               ; preds = %3
  %18 = load i32, i32* @ERROR, align 4
  %19 = load i32, i32* @ERRCODE_EXTERNAL_ROUTINE_EXCEPTION, align 4
  %20 = call i32 @errcode(i32 %19)
  %21 = call i32 (i8*, ...) @errmsg(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  %22 = call i32 @ereport(i32 %18, i32 %21)
  br label %23

23:                                               ; preds = %17, %3
  %24 = load i32*, i32** %8, align 8
  %25 = call i32 @save_item(i32* %24)
  %26 = load i32*, i32** %8, align 8
  %27 = load i32*, i32** %6, align 8
  %28 = call i32 @sv_setsv(i32* %26, i32* %27)
  %29 = load i32, i32* @sp, align 4
  %30 = call i32 @PUSHMARK(i32 %29)
  %31 = load i32, i32* @PUTBACK, align 4
  %32 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %33 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load i32, i32* @G_SCALAR, align 4
  %36 = load i32, i32* @G_EVAL, align 4
  %37 = or i32 %35, %36
  %38 = call i32 @perl_call_sv(i32 %34, i32 %37)
  store i32 %38, i32* %9, align 4
  %39 = load i32, i32* @SPAGAIN, align 4
  %40 = load i32, i32* %9, align 4
  %41 = icmp ne i32 %40, 1
  br i1 %41, label %42, label %51

42:                                               ; preds = %23
  %43 = load i32, i32* @PUTBACK, align 4
  %44 = load i32, i32* @FREETMPS, align 4
  %45 = load i32, i32* @LEAVE, align 4
  %46 = load i32, i32* @ERROR, align 4
  %47 = load i32, i32* @ERRCODE_EXTERNAL_ROUTINE_EXCEPTION, align 4
  %48 = call i32 @errcode(i32 %47)
  %49 = call i32 (i8*, ...) @errmsg(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.2, i64 0, i64 0))
  %50 = call i32 @ereport(i32 %46, i32 %49)
  br label %51

51:                                               ; preds = %42, %23
  %52 = load i32, i32* @ERRSV, align 4
  %53 = call i64 @SvTRUE(i32 %52)
  %54 = icmp ne i64 %53, 0
  br i1 %54, label %55, label %68

55:                                               ; preds = %51
  %56 = load i32, i32* @POPs, align 4
  %57 = load i32, i32* @PUTBACK, align 4
  %58 = load i32, i32* @FREETMPS, align 4
  %59 = load i32, i32* @LEAVE, align 4
  %60 = load i32, i32* @ERROR, align 4
  %61 = load i32, i32* @ERRCODE_EXTERNAL_ROUTINE_EXCEPTION, align 4
  %62 = call i32 @errcode(i32 %61)
  %63 = load i32, i32* @ERRSV, align 4
  %64 = call i32 @sv2cstr(i32 %63)
  %65 = call i32 @strip_trailing_ws(i32 %64)
  %66 = call i32 (i8*, ...) @errmsg(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.3, i64 0, i64 0), i32 %65)
  %67 = call i32 @ereport(i32 %60, i32 %66)
  br label %68

68:                                               ; preds = %55, %51
  %69 = load i32, i32* @POPs, align 4
  %70 = call i32* @newSVsv(i32 %69)
  store i32* %70, i32** %7, align 8
  %71 = load i32*, i32** %7, align 8
  %72 = load i32, i32* @PUTBACK, align 4
  %73 = load i32, i32* @FREETMPS, align 4
  %74 = load i32, i32* @LEAVE, align 4
  ret void
}

declare dso_local i32* @get_sv(i8*, i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, ...) #1

declare dso_local i32 @save_item(i32*) #1

declare dso_local i32 @sv_setsv(i32*, i32*) #1

declare dso_local i32 @PUSHMARK(i32) #1

declare dso_local i32 @perl_call_sv(i32, i32) #1

declare dso_local i64 @SvTRUE(i32) #1

declare dso_local i32 @strip_trailing_ws(i32) #1

declare dso_local i32 @sv2cstr(i32) #1

declare dso_local i32* @newSVsv(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
